--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "fpvlaptracker",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
+    "version": "1.0.1",
+    "author": "warhog",
+    "homepage": "https://github.com/warhog/fpvlaptracker-app",
     "private": true,
     "scripts": {
         "clean": "ionic-app-scripts clean",
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/bluetooth-serial": "^3.12.1",
         "@ionic-native/core": "^3.12.1",
+        "@ionic-native/insomnia": "^4.1.0",
         "@ionic-native/native-audio": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
@@ -30,6 +31,7 @@
         "cordova-plugin-bluetooth-serial": "^0.4.7",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-insomnia": "^4.3.0",
         "cordova-plugin-nativeaudio": "^3.0.9",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
@@ -48,7 +50,7 @@
         "@ionic/cli-plugin-ionic-angular": "1.4.0",
         "typescript": "2.3.3"
     },
-    "description": "An Ionic project",
+    "description": "fpvlaptracker tracker unit application",
     "cordova": {
         "plugins": {
             "cordova-plugin-bluetooth-serial": {},
@@ -59,7 +61,8 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-sqlite-storage": {},
-            "cordova-plugin-nativeaudio": {}
+            "cordova-plugin-nativeaudio": {},
+            "cordova-plugin-insomnia": {}
         },
         "platforms": [
             "android"
