--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
         "@angular/http": "4.4.7",
         "@angular/platform-browser": "4.4.7",
         "@angular/platform-browser-dynamic": "4.4.7",
-        "@ionic-native/bluetooth-serial": "^4.11.0",
-        "@ionic-native/core": "^4.11.0",
-        "@ionic-native/insomnia": "^4.11.0",
-        "@ionic-native/native-audio": "^4.11.0",
-        "@ionic-native/splash-screen": "4.11.0",
-        "@ionic-native/status-bar": "4.11.0",
+        "@ionic-native/bluetooth-serial": "^3.14.0",
+        "@ionic-native/core": "^3.14.0",
+        "@ionic-native/insomnia": "^3.14.0",
+        "@ionic-native/native-audio": "^3.14.0",
+        "@ionic-native/splash-screen": "^3.14.0",
+        "@ionic-native/status-bar": "^3.14.0",
         "@ionic/storage": "^2.1.3",
         "cordova-android": "^7.1.1",
         "cordova-plugin-bluetooth-serial": "^0.4.7",
@@ -40,13 +40,13 @@
         "ionic-angular": "3.9.2",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "4.3.0",
-        "rxjs": "6.2.2",
+        "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.1.11",
-        "typescript": "3.0.1"
+        "typescript": "2.9.2"
     },
     "description": "fpvlaptracker tracker unit application",
     "cordova": {
