--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/bluetooth-serial": "^3.12.1",
         "@ionic-native/core": "^3.12.1",
-        "@ionic-native/insomnia": "^4.1.0",
-        "@ionic-native/native-audio": "^4.1.0",
+        "@ionic-native/insomnia": "3.12.1",
+        "@ionic-native/native-audio": "3.12.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "^2.0.1",
