--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fpvlaptracker",
-    "version": "2.3.1",
+    "version": "2.3.2",
     "author": "warhog",
     "homepage": "https://github.com/warhog/fpvlaptracker-app",
     "private": true,
@@ -26,6 +26,7 @@
         "@ionic-native/native-audio": "4.11.0",
         "@ionic-native/splash-screen": "4.11.0",
         "@ionic-native/status-bar": "4.11.0",
+        "@ionic-native/text-to-speech": "^4.16.0",
         "@ionic/storage": "^2.1.3",
         "cordova-android": "^7.1.1",
         "cordova-plugin-bluetooth-serial": "^0.4.7",
@@ -35,6 +36,7 @@
         "cordova-plugin-nativeaudio": "^3.0.9",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-tts": "^0.2.3",
         "cordova-plugin-whitelist": "^1.3.3",
         "cordova-sqlite-storage": "^2.3.3",
         "ionic-angular": "3.9.2",
@@ -60,7 +62,8 @@
             "ionic-plugin-keyboard": {},
             "cordova-sqlite-storage": {},
             "cordova-plugin-nativeaudio": {},
-            "cordova-plugin-insomnia": {}
+            "cordova-plugin-insomnia": {},
+            "cordova-plugin-tts": {}
         },
         "platforms": [
             "android"
